# uniqtoday_api

./: README.md  action items.txt  config.py  index  jee_model.cls  main.py  neet_model.cls  pyproject.toml  question_bank_jee.csv  question_bank_neet.csv  records  requirements.txt
db/: engine.py  models.py  sparkSession.py
migrations/: env.py
models/: LeadershipBoard.py  PreviousYearQuestionPapers.py  StudentPlannerModel.py  UserModel.py  import.csv  import1.csv
pickle/: Predict_Student_Efforts_MODEL.pkl  adaptive_model_12.pkl  adaptive_model_cat.pkl  adaptive_model_clat.pkl  adaptive_model_jee.pkl  adaptive_model_neet.pkl  content_encoder.pkl  content_encoder_10.pkl  content_encoder_11.pkl  content_encoder_12.pkl  content_encoder_9.pkl  content_encoder_cat.pkl  content_encoder_clat.pkl  content_encoder_jee.pkl  content_encoder_neet.pkl
queues/: worker.py
routers/: adaptiveQuestions.py  adaptiveQuestionsOld.py  analytics.py  assessmentQuestionSelection.py  assessmentQuestionsPredictor.py  bookmarkQuestion.py  dashboard.py  exams.py  goalSetting.py  leadershipBoard.py  liveExams.py  newAdaptiveAPI.py  notification.py  payment.py  postExamAnalytics.py  predictStudentsEffort.py  preference.py  previousYearQuestionPapers.py  profilingTest.py  profilling_input.py  questionReview.py  question_selection.py  referrals.py  registration.py  resource.py  result.py  scholarshipTest.py  stageAtSignUp.py  studentPlanner.py  studentSelectionInCe.py  student_save_result.py  subjectResources.py  subscriptions.py  testSeries.py  todayFeeling.py  users.py  weakTopicPrediction.py  (+1 more)
(+59 files in other folders)
